@@ -1,3 +1,7 @@
+2010-10-14 Erwann Chenede - <erwann.chenede@oracle.com>
+
+  * gtk-engine/nimbus_style.c: fix for 16939
+
 2010-07-23 Erwann Chenede - <erwann.chenede@sun.com>
 
   * gtk-engine/nimbus_style.c: fix for 13704
